# context-engineering-visualizer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: sync.yml
app/: __init__.py  agent.py  knowledge.py  memory.py  process_knowledge.py  tools.py  ui.py  visualizer.py
config/: __init__.py  settings.py
data/: product_strategy_decision_handbook_atlas_pay.md
faiss_index_store/: index.faiss  index.pkl
